--- a/frontend/src/app/pages/home/home.component.css
+++ b/frontend/src/app/pages/home/home.component.css
@@ -1,15 +1,15 @@
 :host {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
-  height: 100vh;
+  min-height: 100vh;
 }
 .title {
   color: var(--white-color);
   font-size: 7.5rem;
 }
-.container {
+
+.create-join {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -31,7 +31,26 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 0.25rem;
+  min-width: 300px;
+  height: 0px;
+  overflow: hidden;
+  transition: all 0.8s;
+}
+.input-container-open {
+  height: 150px;
 }
 mat-slide-toggle {
-  margin-bottom: 1.25rem;
+  margin-bottom: 0.25rem;
+}
+.placeholder {
+  height: 40px;
+  width: 100%;
+}
+.quizzes-rooms {
+  width: 0px;
+  overflow: hidden;
+  transition: all 0.8s;
+}
+.quizzes-rooms-open {
+  width: 325px;
 }
