--- a/frontend/src/app/pages/home/home.component.css
+++ b/frontend/src/app/pages/home/home.component.css
@@ -1,56 +1,15 @@
 :host {
   display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  min-height: 100vh;
-}
-.title {
-  color: var(--white-color);
-  font-size: 7.5rem;
-}
-
-.create-join {
-  display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 5rem;
-}
-.main-button {
-  margin: 0.5rem;
-}
-.form-container {
-  display: flex;
   flex-direction: column;
-  align-items: center;
 }
-.submit-container {
-  display: flex;
-  gap: 0.5rem;
-}
-.input-container {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 0.25rem;
-  min-width: 300px;
-  height: 0px;
-  overflow: hidden;
-  transition: all 0.8s;
-}
-.input-container-open {
-  height: 150px;
-}
-mat-slide-toggle {
-  margin-bottom: 0.25rem;
-}
-.placeholder {
-  height: 40px;
+.-container {
+  max-width: 1000px;
   width: 100%;
 }
-.quizzes-rooms {
-  width: 0px;
-  overflow: hidden;
-  transition: all 0.8s;
-}
-.quizzes-rooms-open {
-  width: 325px;
+.content {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
 }
