--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -1,8 +1,6 @@
 <ul class="nav justify-content-end nav-underline">
   <li class="nav-item">
-    <a class="nav-link active" aria-current="page" [routerLink]="['/home']"
-      >Home</a
-    >
+    <a class="nav-link" aria-current="page" [routerLink]="['/home']">Home</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" [routerLink]="['/home']">Create Quiz</a>
@@ -11,6 +9,6 @@
     <a class="nav-link" [routerLink]="['/home']">Profile</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" [routerLink]="['/home']">Login</a>
+    <a class="nav-link" [routerLink]="['/login']">Login</a>
   </li>
 </ul>
