--- a/frontend/src/app/components/room/room.component.css
+++ b/frontend/src/app/components/room/room.component.css
@@ -47,6 +47,7 @@ span {
 .name {
   text-align: center;
   min-width: 100px;
+  max-width: 175px;
   font-size: 28px;
   font-weight: bold;
   color: #fff;
