--- a/frontend/src/app/components/room/room.component.html
+++ b/frontend/src/app/components/room/room.component.html
@@ -4,7 +4,7 @@
     [style.backgroundColor]="randomColor2"
     [style.boxShadow]="'0px 0px 30px 40px ' + randomColor2"
   >
-    <h5>
+    <h5 class="text-truncate">
       {{ room.name }}
     </h5>
   </div>
