feat: add profile page and header component, update routing and styles

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,6 @@
 <html data-bs-theme="dark">
-  <router-outlet />
+  <div class="-container">
+    <app-header />
+    <router-outlet />
+  </div>
 </html>
