--- a/frontend/src/app/pages/register/register.component.css
+++ b/frontend/src/app/pages/register/register.component.css
@@ -5,14 +5,6 @@
   height: 100vh;
 }
 
-.-container {
-  width: 100%;
-  max-width: 1000px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 15vh;
-}
 .form {
   display: flex;
   flex-direction: column;
@@ -22,7 +14,13 @@
   padding: 1.5rem;
   background-color: var(--secondary-color);
   border-radius: 6px;
+  margin-top: 10vh;
 }
 .register {
   text-align: end;
+}
+@media (max-width: 768px) {
+  .form {
+    margin-top: 0;
+  }
 }
