--- a/frontend/src/app/pages/register/register.component.html
+++ b/frontend/src/app/pages/register/register.component.html
@@ -1,78 +1,74 @@
-<div class="-container">
-  <app-header />
+<div class="form">
+  <div class="mb-0">
+    <label for="exampleInputEmail1" class="form-label">
+      <span>Name</span>
+    </label>
+    <input
+      type="email"
+      class="form-control"
+      id="exampleInputEmail1"
+      aria-describedby="emailHelp"
+      [(ngModel)]="username"
+      #usernameInput="ngModel"
+    />@if(!username && usernameInput.touched){
 
-  <div class="form">
-    <div class="mb-0">
-      <label for="exampleInputEmail1" class="form-label">
-        <span>Name</span>
-      </label>
-      <input
-        type="email"
-        class="form-control"
-        id="exampleInputEmail1"
-        aria-describedby="emailHelp"
-        [(ngModel)]="username"
-        #usernameInput="ngModel"
-      />@if(!username && usernameInput.touched){
-
-      <small class="text-danger">Email is required</small>
-      }
-    </div>
-    <div class="mb-0">
-      <label for="exampleInputEmail1" class="form-label">
-        <span>Email address</span>
-      </label>
-      <input
-        type="email"
-        class="form-control"
-        id="exampleInputEmail1"
-        aria-describedby="emailHelp"
-        [(ngModel)]="email"
-        #emailInput="ngModel"
-      />@if(!email && emailInput.touched){
-
-      <small class="text-danger">Email is required</small>
-      }
-    </div>
-    <div class="mb-0">
-      <label class="form-label">
-        <span>Password</span>
-      </label>
-      <input
-        type="password"
-        class="form-control"
-        [(ngModel)]="password"
-        #passwordInput="ngModel"
-      />@if(!password && passwordInput.touched){
-
-      <small class="text-danger">Password is required</small>
-      }
-    </div>
-    <div class="mb-3">
-      <label class="form-label">
-        <span>Confirm Password</span>
-      </label>
-      <input
-        type="password"
-        class="form-control"
-        [(ngModel)]="confirmPassword"
-        #passwordConfirmInput="ngModel"
-      />@if(!confirmPassword && passwordConfirmInput.touched){
-
-      <small class="text-danger">Password confirm is required</small>
-      }
-    </div>
-    <button
-      class="btn btn-primary"
-      (click)="register()"
-      [class.disabled]="!username || !email || !password || !confirmPassword"
-    >
-      Submit
-    </button>
-    <small class="register text-light">
-      Already have an account? <a [routerLink]="['/login']">Login</a>
-    </small>
-    <small class="text-danger">{{ error }}</small>
-    <small class="text-success">{{ success }}</small>
+    <small class="text-danger">Email is required</small>
+    }
   </div>
+  <div class="mb-0">
+    <label for="exampleInputEmail1" class="form-label">
+      <span>Email</span>
+    </label>
+    <input
+      type="email"
+      class="form-control"
+      id="exampleInputEmail1"
+      aria-describedby="emailHelp"
+      [(ngModel)]="email"
+      #emailInput="ngModel"
+    />@if(!email && emailInput.touched){
+
+    <small class="text-danger">Email is required</small>
+    }
+  </div>
+  <div class="mb-0">
+    <label class="form-label">
+      <span>Password</span>
+    </label>
+    <input
+      type="password"
+      class="form-control"
+      [(ngModel)]="password"
+      #passwordInput="ngModel"
+    />@if(!password && passwordInput.touched){
+
+    <small class="text-danger">Password is required</small>
+    }
+  </div>
+  <div class="mb-3">
+    <label class="form-label">
+      <span>Confirm Password</span>
+    </label>
+    <input
+      type="password"
+      class="form-control"
+      [(ngModel)]="confirmPassword"
+      #passwordConfirmInput="ngModel"
+    />@if(!confirmPassword && passwordConfirmInput.touched){
+
+    <small class="text-danger">Password confirm is required</small>
+    }
+  </div>
+  <button
+    class="btn btn-primary"
+    (click)="register()"
+    [class.disabled]="!username || !email || !password || !confirmPassword"
+  >
+    Submit
+  </button>
+  <small class="register text-light">
+    Already have an account? <a [routerLink]="['/login']">Login</a>
+  </small>
+  <small class="text-danger">{{ error }}</small>
+  <small class="text-success">{{ success }}</small>
 </div>
