--- a/frontend/src/app/components/create-room/create-room.component.css
+++ b/frontend/src/app/components/create-room/create-room.component.css
@@ -1,9 +1,3 @@
-:host {
-  padding: 1.5rem;
-  display: block;
-  background-color: var(--tertiary-color);
-  border-radius: 6px;
-}
 .-container {
   display: flex;
   justify-content: space-between;
@@ -11,15 +5,18 @@
 .left {
   background-color: var(--secondary-color);
   border-radius: 6px;
-  padding: 1rem 1.25rem;
+  padding: 1rem 1.5rem;
 }
 .button-group {
   display: flex;
   flex-direction: column;
   width: fit-content;
   align-items: start;
-  gap: 0.5rem;
-  padding: 0.5rem 0rem 0rem 0rem;
+  padding: 0.75rem 0rem 0rem 0rem;
+  width: 100%;
+}
+.radio-mode {
+  width: 100%;
 }
 .room-name {
   margin: 0px;
@@ -33,7 +30,7 @@
   justify-content: space-between;
   width: 400px;
   align-items: end;
-  padding: 1rem 1.25rem;
+  padding: 1rem 1.5rem;
   background-color: var(--secondary-color);
   border-radius: 6px;
 }
@@ -44,7 +41,34 @@
   width: 100%;
 }
 .quizzes {
+  border-radius: 6px;
+  padding: 1rem 0rem;
+  background-color: var(--secondary-color);
+  margin-bottom: 2rem;
+}
+.bottom {
   display: flex;
-  flex-direction: column;
-  gap: 0.75rem;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 0.75rem;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .-container {
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .input-text {
+    width: 100%;
+  }
+  .select-quiz-container {
+    width: 100%;
+    min-height: 125px;
+  }
+  h5 {
+    font-size: 1rem;
+  }
+  p {
+    font-size: 0.8rem;
+  }
 }
