--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -2,10 +2,18 @@
   <li class="nav-item">
     <a class="nav-link" aria-current="page" [routerLink]="['/home']">Home</a>
   </li>
+
+  <li class="nav-item">
+    <a class="nav-link" [routerLink]="['/quizzes']">Quizzes</a>
+  </li>
   @if(isLoggedIn){
 
   <li class="nav-item">
     <a class="nav-link" [routerLink]="['/profile']">Profile</a>
+  </li>
+
+  <li class="nav-item">
+    <a class="nav-link" (click)="logout()">Logout</a>
   </li>
 
   }@else {
