--- a/frontend/src/app/components/quiz/quiz.component.css
+++ b/frontend/src/app/components/quiz/quiz.component.css
@@ -3,10 +3,7 @@
   background-color: var(--secondary-color);
   display: flex;
   flex-direction: column;
-  padding: 0.75rem;
-  border-radius: 6px;
-  text-align: center;
-  cursor: pointer;
+  padding: 0rem 0.75rem 0.75rem 0.75rem;
 }
 ul {
   text-align: left;
@@ -14,4 +11,29 @@ ul {
 }
 button {
   margin-top: 0.5rem;
+}
+.btn-group {
+  display: flex;
+  justify-content: center;
+}
+button {
+  max-width: 175px;
+}
+p {
+  text-align: left;
+}
+.header {
+  display: flex;
+  justify-content: end;
+  gap: 1rem;
+  i {
+    cursor: pointer;
+  }
+}
+.divider {
+  width: 100%;
+  height: 5px;
+  border-radius: 6px;
+  background-color: var(--tertiary-color);
+  margin: 0.75rem 0 0rem 0rem;
 }
