--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -1,6 +1,3 @@
-<!-- <div class="-container"> -->
-<!-- <app-header /> -->
-
 <div class="form">
   <div class="mb-0">
     <label for="exampleInputEmail1" class="form-label">
@@ -42,7 +39,23 @@
   <small class="register text-light">
     Don't have an account? <a [routerLink]="['/register']">SignUp</a>
   </small>
-  <small class="text-danger">{{ error }}</small>
-  <small class="text-success">{{ success }}</small>
 </div>
-<!-- </div> -->
+<div
+  class="toast align-items-center"
+  role="alert"
+  aria-live="assertive"
+  aria-atomic="true"
+  id="toast"
+>
+  <div class="d-flex">
+    <div class="toast-body">
+      <span> {{ result?.message || result?.error || "" }} </span>
+    </div>
+    <button
+      type="button"
+      class="btn-close me-2 m-auto"
+      data-bs-dismiss="toast"
+      aria-label="Close"
+    ></button>
+  </div>
+</div>
