--- a/frontend/src/app/pages/register/register.component.html
+++ b/frontend/src/app/pages/register/register.component.html
@@ -69,6 +69,23 @@
   <small class="register text-light">
     Already have an account? <a [routerLink]="['/login']">Login</a>
   </small>
-  <small class="text-danger">{{ error }}</small>
-  <small class="text-success">{{ success }}</small>
+</div>
+<div
+  class="toast align-items-center"
+  role="alert"
+  aria-live="assertive"
+  aria-atomic="true"
+  id="toast"
+>
+  <div class="d-flex">
+    <div class="toast-body">
+      <span> {{ result?.message || result?.error || "" }} </span>
+    </div>
+    <button
+      type="button"
+      class="btn-close me-2 m-auto"
+      data-bs-dismiss="toast"
+      aria-label="Close"
+    ></button>
+  </div>
 </div>
