--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -3,4 +3,24 @@
     <app-header />
     <router-outlet />
   </div>
+
+  <div
+    id="toast"
+    class="toast align-items-center text-bg-primary border-0 position-fixed bottom-0 end-0 m-3"
+    role="alert"
+    aria-live="assertive"
+    aria-atomic="true"
+  >
+    <div class="d-flex">
+      <div class="toast-body">
+        <span>{{ toastMessage }}</span>
+      </div>
+      <button
+        type="button"
+        class="btn-close me-2 m-auto"
+        data-bs-dismiss="toast"
+        aria-label="Close"
+      ></button>
+    </div>
+  </div>
 </html>
