--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -46,16 +46,4 @@
   aria-live="assertive"
   aria-atomic="true"
   id="toast"
->
-  <div class="d-flex">
-    <div class="toast-body">
-      <span> {{ result?.message || result?.error || "" }} </span>
-    </div>
-    <button
-      type="button"
-      class="btn-close me-2 m-auto"
-      data-bs-dismiss="toast"
-      aria-label="Close"
-    ></button>
-  </div>
-</div>
+></div>
