--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -40,10 +40,25 @@
     Don't have an account? <a [routerLink]="['/register']">SignUp</a>
   </small>
 </div>
+
 <div
-  class="toast align-items-center"
+  id="toast"
+  class="toast align-items-center text-bg-primary border-0 position-fixed bottom-0 end-0 m-3"
   role="alert"
   aria-live="assertive"
   aria-atomic="true"
-  id="toast"
-></div>
+>
+  <div class="d-flex">
+    <div class="toast-body">
+      <span>{{
+        result?.message || result?.error || "something went wrong."
+      }}</span>
+    </div>
+    <button
+      type="button"
+      class="btn-close me-2 m-auto"
+      data-bs-dismiss="toast"
+      aria-label="Close"
+    ></button>
+  </div>
+</div>
