--- a/frontend/src/app/components/create-quiz/create-quiz.component.html
+++ b/frontend/src/app/components/create-quiz/create-quiz.component.html
@@ -26,6 +26,7 @@
       @for (question of questions; track question || questionIndex; let
       questionIndex = $index) {
       <div class="question">
+        <i class="bi bi-trash3" (click)="deleteQuestion(questionIndex)"></i>
         <textarea
           oninput="this.style.height='auto';this.style.height=this.scrollHeight + 'px'"
           rows="1"
