feat: enhance quiz and room functionalities with user authentication and error handling

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,4 @@
-<html data-bs-theme="dark">
-  <div class="-container">
-    <app-header />
-    <router-outlet />
-  </div>
-</html>
+<div class="-container" data-bs-theme="dark">
+  <app-header />
+  <router-outlet />
+</div>
