--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -6,7 +6,7 @@
   <li class="nav-item">
     <a class="nav-link" [routerLink]="['/quizzes']">Quizzes</a>
   </li>
-  @if(isLoggedIn){
+  @if(loggedIn){
 
   <li class="nav-item">
     <a class="nav-link" [routerLink]="['/profile']">Profile</a>
