--- a/frontend/src/app/components/join-room/join-room.component.html
+++ b/frontend/src/app/components/join-room/join-room.component.html
@@ -17,5 +17,11 @@
       [(ngModel)]="roomId"
     />
   </div>
-  <button class="btn btn-primary play-button" (click)="joinRoom()">Play</button>
+  <button
+    class="btn btn-primary play-button"
+    [class.disabled]="!roomId || !username"
+    (click)="joinRoom()"
+  >
+    Play
+  </button>
 </div>
