feat: update room joining logic and UI enhancements
- Refactored getRoom controller to use query parameters instead of body for roomId.
- Enhanced team mode validation in socket service to restrict team numbers between 2 and 10.
- Updated frontend to conditionally render header based on route.
- Added team selection dropdown in create-room component for team mode.
- Implemented join-room component to handle team selection and display participants.
- Improved pagination in quizzes component and added navigation links.
- Removed unused quiz component and its associated files.
- Enhanced styling for various components to improve UI/UX.
- Added error handling and toast notifications for better user feedback.

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,7 @@
 <div class="-container" data-bs-theme="dark">
+  @if(showHeader){
   <app-header />
+  }
   <router-outlet />
   <div
     class="toast align-items-center text-bg{{
