--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -4,7 +4,7 @@
   </li>
 
   <li class="nav-item">
-    <a class="nav-link" [routerLink]="['/quizzes']">Quizzes</a>
+    <a class="nav-link" [routerLink]="['/quizzes', 1]">Quizzes</a>
   </li>
   @if(loggedIn){
 
