--- a/frontend/src/app/components/quiz/quiz.component.css
+++ b/frontend/src/app/components/quiz/quiz.component.css
@@ -34,6 +34,6 @@ p {
   width: 100%;
   height: 5px;
   border-radius: 6px;
-  background-color: var(--tertiary-color);
+  background-color: var(--white-color);
   margin: 0.75rem 0 0rem 0rem;
 }
