--- a/frontend/src/app/components/quiz/quiz.component.html
+++ b/frontend/src/app/components/quiz/quiz.component.html
@@ -5,7 +5,7 @@
   <i class="bi bi-check2 text-light"></i>
   }@else {
 
-  <i class="bi bi-clipboard text-light" (click)="copy()"></i>
+  <i class="bi bi-copy text-light" (click)="copy()"></i>
   }
 </div>
 <h6>{{ quiz.name }}</h6>
@@ -20,11 +20,12 @@
   </p>
   }
 </ul>
-}
+} @if(route == "/home"){
 <div class="btn-group">
   <button class="btn btn-primary" (click)="toggleQuestions()">
     Toggle Questions
   </button>
   <button class="btn btn-primary" (click)="selectQuiz()">Select Quiz</button>
 </div>
+}
 <div class="divider"></div>
