--- a/frontend/src/app/components/create-room/create-room.component.css
+++ b/frontend/src/app/components/create-room/create-room.component.css
@@ -56,6 +56,10 @@
 select {
   margin: 0.4rem 0;
 }
+small {
+  text-align: end;
+  width: 100%;
+}
 @media (max-width: 768px) {
   .-container {
     flex-direction: column;
