feat: enhance join room functionality with user authentication and input handling

--- a/frontend/src/app/pages/join-room/join-room.component.html
+++ b/frontend/src/app/pages/join-room/join-room.component.html
@@ -1,12 +1,11 @@
-<div
-  class="-container"
-  [style.width]="room.mode?.type === 'team' ? '90%' : 'unset'"
->
+<div class="-container">
   <div class="form">
     <div class="inputs">
       <input
         type="text"
         class="form-control input-text"
+        [class.disabled]="loggedIn"
+        [disabled]="loggedIn"
         aria-label="Sizing example input"
         aria-describedby="inputGroup-sizing-sm"
         placeholder="Nickname"
@@ -37,10 +36,9 @@
       Play
     </button>
   </div>
-  @if(room.mode?.type == "team"){
 
   <div class="teams">
-    @for (team of teamsArray; track team) {
+    @if(room.mode?.type == "team"){ @for (team of teamsArray; track team) {
     <div class="team">
       <h4>Team {{ $index + 1 }}</h4>
       <div class="participants">
@@ -55,7 +53,10 @@
         }
       </div>
     </div>
-    }
+    } }@else { @for(participant of room.participants; track participant){
+    <div class="participant">
+      <span>{{ participant.name }}</span>
+    </div>
+    } }
   </div>
-  }
 </div>
