--- a/frontend/src/app/pages/play/play.component.html
+++ b/frontend/src/app/pages/play/play.component.html
@@ -2,7 +2,13 @@
 <div class="lobby">
   <div class="lobby-header">
     <h1>{{ room.name }}</h1>
-    <h1 class="room-id">Room ID: {{ room.roomId }}</h1>
+    <div class="lobby-header-inner">
+      <div class="lobby-header-inner-inner">
+        <h1 class="room-id">Room ID: {{ room.roomId }}</h1>
+        <h2>{{ room.name }}</h2>
+      </div>
+      <canvas #qrCanvas></canvas>
+    </div>
   </div>
 
   <div class="lobby-content">
@@ -18,7 +24,7 @@
       <h3>
         {{ participant.name }}
       </h3>
-      @if(host){
+      @if(host && $index > 0){
       <i class="bi bi-x-square kick-icon" (click)="kick(participant.name)"></i>
       }
     </div>
