--- a/frontend/src/app/components/create-quiz/create-quiz.component.html
+++ b/frontend/src/app/components/create-quiz/create-quiz.component.html
@@ -108,7 +108,7 @@
             class="btn btn-outline-success yes-no-button"
             for="yes-{{ questionIndex }}"
           >
-            <h6>True</h6>
+            <h6>Yes</h6>
           </label>
           <input
             type="radio"
@@ -123,7 +123,7 @@
             class="btn btn-outline-danger yes-no-button"
             for="no-{{ questionIndex }}"
           >
-            <h6>False</h6>
+            <h6>No</h6>
           </label>
         </div>
         }@else {
