--- a/frontend/src/app/components/rooms/rooms.component.html
+++ b/frontend/src/app/components/rooms/rooms.component.html
@@ -1,6 +1,6 @@
 @for(room of rooms; track room._id){
 <app-room [room]="room" [routerLink]="['/join', room.roomId]" />
-} @if(rooms.length < 1){
+} @if( rooms && rooms.length < 1){
 <div class="no-rooms">
   <h1>Will you be the first to host?</h1>
 </div>
