--- a/frontend/src/app/pages/play/play.component.css
+++ b/frontend/src/app/pages/play/play.component.css
@@ -34,10 +34,11 @@
   display: flex;
   flex-wrap: wrap;
   padding: 1rem;
-  height: 35%;
+  height: 42%;
   min-height: 200px;
   width: 100%;
   background-color: var(--secondary-color);
+  border-radius: 6px 6px 0px 0px;
 }
 .participant {
   border-radius: 6px;
@@ -71,12 +72,225 @@ canvas {
 
 .hud {
   position: absolute;
-  bottom: 37.5%;
+  bottom: 42.5%;
   width: 100%;
   display: flex;
   justify-content: space-between;
+  z-index: 5;
 }
+.question {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  justify-content: space-between;
+  align-items: center;
+}
+.question-header {
+  border-radius: 6px;
+  text-align: center;
+  margin: 1.25rem;
+  padding: 0.75rem 1rem;
+  background-color: var(--secondary-color);
+}
+.question-footer,
+.button-disabled {
+  width: 100%;
+  height: 42.5vh;
+}
+.button-disabled {
+  z-index: 10;
+  position: absolute;
+  bottom: 0;
+}
+
+.yes-no-container,
+.multiple-choice-container {
+  width: 100%;
+  height: 100%;
+}
+.yes-no-button {
+  width: 50%;
+}
+.multiple-choice-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+.color-00,
+.color-0 {
+  background-color: #e41537;
+}
+.color-01,
+.color-1 {
+  background-color: #0565d1;
+}
+.color-10,
+.color-2 {
+  background-color: #d99f00;
+}
+.color-11,
+.color-3 {
+  background-color: #229000;
+}
+.color-20,
+.color-4 {
+  background-color: #6e2ee5;
+}
+.color-21,
+.color-5 {
+  background-color: #de88b1;
+}
+.color-30,
+.color-6 {
+  background-color: #e75b20;
+}
+.color-31,
+.color-7 {
+  background-color: #a5a5a5;
+}
+.multiple-choice-button {
+  width: calc(50% - 6.5px);
+}
+.single-button {
+  width: 100%;
+}
+h3 {
+  align-self: center;
+}
+.open-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+  height: 100%;
+}
+.open-input {
+  width: calc(100% - 0.4rem);
+  resize: none;
+  min-height: 60%;
+}
+.waiting-container {
+  opacity: 0.8;
+}
+.answer-container,
+.waiting-container,
+.statistic-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.answer-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 3rem;
+}
+.opacity {
+  opacity: 0;
+  cursor: unset;
+}
+.answer-icon {
+  height: 130px;
+
+  color: var(--white-color);
+  font-size: 100px;
+}
+.statistic-content-desktop {
+  height: 300px;
+  width: 100%;
+  display: flex;
+  align-items: end;
+  justify-content: center;
+  gap: 2rem;
+  margin-top: 4rem;
+}
+.statistic-content-mobile {
+  display: none;
+  flex-direction: column;
+}
+.statistic-content-open {
+  height: 100%;
+  flex-direction: column;
+  align-self: center;
+}
+.statistic-container {
+  justify-content: end;
+  flex-direction: column;
+}
+.statistic-item {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  text-align: center;
+  justify-content: end;
+  margin-bottom: 0.2rem;
+}
+.statistic-bar {
+  width: 75px;
+  min-height: 10px;
+  border-radius: 6px 6px 0 0;
+}
+.statistic-item-header {
+  display: flex;
+  justify-content: center;
+  flex-wrap: nowrap;
+}
+.statistic-item-open {
+  display: flex;
+  align-items: center;
+  padding: 0.5rem 0.75rem;
+  background-color: var(--secondary-color);
+  border-radius: 6px;
+  margin: 1rem;
+}
+
+@media (max-width: 992px) {
+  .statistic-content-desktop {
+    display: none;
+  }
+  .statistic-content-mobile {
+    display: flex;
+    width: 100%;
+    gap: 0.2rem;
+    flex: 1;
+    max-height: 350px;
+    margin-bottom: 4rem;
+  }
+  .statistic-container {
+    justify-content: space-between;
+  }
+  .statistic-item {
+    display: flex;
+    flex-direction: row-reverse;
+    width: 90%;
+    text-align: center;
+    align-items: end;
+    justify-content: start;
+    margin-bottom: 0;
+  }
+  .statistic-bar {
+    height: 30px;
+    min-width: 10px;
+    border-radius: 0 6px 6px 0;
+  }
+  .statistic-item-header {
+    display: flex;
+    align-items: end;
+    flex-wrap: nowrap;
+    h1 {
+      height: 29px;
+    }
+    h3 {
+      height: 26px;
+    }
+  }
+}
+
 @media (max-width: 576px) {
+  button > h2 {
+    font-size: calc(0.4rem + 4vw);
+  }
   canvas {
     max-width: 100px;
     max-height: 100px;
