--- a/frontend/src/app/pages/play/play.component.css
+++ b/frontend/src/app/pages/play/play.component.css
@@ -77,6 +77,24 @@ canvas {
   display: flex;
   justify-content: space-between;
   z-index: 5;
+  h3 {
+    margin-bottom: 3rem;
+  }
+}
+.quiz-progression {
+  margin: 0.25rem;
+  padding: 0.25rem 0.5rem;
+  background-color: var(--secondary-color);
+  border-radius: 6px;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.left,
+.right {
+  display: flex;
+  align-items: end;
+  justify-content: end;
 }
 .question {
   display: flex;
@@ -170,10 +188,14 @@ h3 {
 }
 .waiting-container {
   opacity: 0.8;
+  h4 {
+    margin-top: 2rem;
+  }
 }
 .answer-container,
 .waiting-container,
-.statistic-container {
+.statistic-container,
+.leaderboard-container {
   width: 100%;
   height: 100%;
   display: flex;
@@ -244,6 +266,36 @@ h3 {
   border-radius: 6px;
   margin: 1rem;
 }
+.leaderboard-container {
+  flex-direction: column;
+  justify-content: start;
+}
+.leaderboard-content {
+  width: 80%;
+  max-width: 1000px;
+  margin: 0.75rem;
+  padding: 0.5rem 0.75rem;
+  background-color: var(--secondary-color);
+  border-radius: 6px;
+}
+.leaderboard-item {
+  display: flex;
+
+  justify-content: space-between;
+}
+.leaderboard-item-outer {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin: 0.2rem;
+  padding: 0.15rem 0.5rem;
+}
+.divider {
+  width: 100%;
+  height: 6px;
+  border-radius: 6px;
+  background-color: var(--white-color);
+}
 
 @media (max-width: 992px) {
   .statistic-content-desktop {
@@ -307,5 +359,12 @@ h3 {
   }
   .lobby-header > h1 {
     display: none;
+  }
+  .question-header {
+    margin: 0.75rem;
+    padding: 0.5rem 0.75rem;
+    h1 {
+      font-size: calc(3vw + 0.75rem);
+    }
   }
 }
